[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fineline"
version = "0.0.1"
authors = [
  { name="Sahand Nazarzadeh", email="sahand.nazarzadeh@gmail.com" },
]
description = "Financial deep learning, backtesting and trading pipeline"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "cython==3.0.7"
]
